src/styles/code.css
/* redline theme */
code[class*="language-"],
pre[class*="language-"] {
  background: transparent;
  color: #ffffff;
}

pre.not-prose {
  @apply bg-gray-800;
}

/* Properties specific to code blocks */
pre[class*="language-"] {
  padding: 1em; /* this is standard */
  margin: 0.5em 0; /* this is the default */
  overflow: auto; /* this is standard */
  border-radius: 0.5em;
}

.token.source {
  color: #ffffff;
  background-color: #1F2937;
}
.token.comment,
.token.punctuation {
  color: #FECACA;
  font-style: italic;
}
.token.function,
.token.variable,
.token.constant,
.token.tag,
.token.deleted,
.token.string,
.token.symbol,
.token.inserted,
.token.attr-name {
  color: #DC2626;
}
.token.keyword,
.token.operator {
  color: #F87171;
}
.token.builtin,
.token.number,
.token.char,
.token.changed {
  color: rgb(255, 255, 255);
}

